# cluster-job-monitor

./: .gitignore  Cargo.toml  README.md  config.pbs.slack.toml  config.slurm.slack.toml
src/: job.rs  lib.rs  main.rs  pbs.rs  slack.rs  slurm.rs
