[package]
name = "cluster-job-monitor"
version = "0.2.1"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A tool to monitor jobs in HPC cluster."
repository = "https://github.com/jiegec/cluster-job-monitor"
keywords = ["slack", "hpc", "pbs", "slurm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.19.0", features = ["macros", "time", "rt-multi-thread"] }
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
structopt = "0.3.26"
toml = "0.8.8"
json = "0.12.4"
jfs = "0.9.0"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json", "native-tls-vendored"], default-features = false }
chrono = { version = "0.4.19", features = ["serde"] }
timeago = "0.4.2"
anyhow = "1.0.75"
